@@ -2,7 +2,9 @@
 <!-- This file is part of Coog. The COPYRIGHT file at the top level of
 this repository contains the full copyright notices and license terms. -->
 <form>
-	<label name="style_template"/>
+    <label name="use_default_style"/>
+    <field name="use_default_style"/>
+    <label name="style_template"/>
     <field name="style_template"/>
     <newline/>
 </form>
